[metadata]
name = collectd-ceph-storage
author = Alex Krzos
author-email = akrzos@redhat.com
summary = Yet another Ceph Collectd Plugin in Python.
description-file = README.rst
url = https://github.com/akrzos/collectd-ceph-storage
home-page = https://github.com/akrzos/collectd-ceph-storage
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: System :: Monitoring

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = collectd_ceph_storage

[wheel]
universal = 1
